tests/paczka1/fuzzy1/63543256.err
Error in line 4: 2eNrGtPOm S99 69,8
Error in line 16: 2eNrGtPOm A885 72,08
Error in line 6: 2eNrGtPOm A885 41,5
Error in line 19: S99 A57 34,2
Error in line 29: S99 S99 4,45
Error in line 23: vsRUg1 S469 96,5
Error in line 31: vsRUg1 A885 88,5
